# src/models/api/APIInvoice.model.ts
@@ -1,4 +1,4 @@
-import { Invoice } from "../models"
+import { Invoice } from "../entities"
 
 
 export class APIInvoice {
@@ -10,24 +10,41 @@ export class APIInvoice {
   public accountId!: string
   /** Customer ID */
   public customerId!: string
-  /** Price Breakdown */
+  /** 
+   * Price Breakdown 
+   * @isDouble
+   */
   public priceBreakdown!: number
   /** Products */
   public products!: {
     /** Product ID */
     id: string
-    /** Product calculated price */
+    /** 
+     * Product calculated price 
+     * @isDouble
+     */
     price: number
-    /** Product accumulated unit */
+    /** 
+     * Product accumulated unit 
+     * @isDouble
+     */
     units: number
   }[]
   /** Billing Period */
   public billingPeriod!: {
-    /** Period Start Date*/
+    /** 
+     * Period Start Date
+     * @isDate
+     */
     startTime: Date
-    /** Period End Date*/
+    /** 
+     * Period End Date
+     * @isDate
+     */
     endTime: Date
   }
+  public createdAt!: Date
+  public updatedAt!: Date
 
   public static fromEntity(entity: Invoice): APIInvoice {
     return new APIInvoice({
@@ -44,7 +61,9 @@ export class APIInvoice {
       billingPeriod: {
         startTime: entity.billingPeriod.startTime,
         endTime: entity.billingPeriod.endTime
-      }
+      },
+      createdAt: entity.createdAt,
+      updatedAt: entity.updatedAt
     })
   }
 
