# src/routes.ts
@@ -17,12 +17,61 @@ const models: TsoaRoute.Models = {
     "APIInvoice": {
         "dataType": "refObject",
         "properties": {
+            "id": {"dataType":"string","required":true},
+            "name": {"dataType":"string","required":true},
+            "accountId": {"dataType":"string","required":true},
+            "customerId": {"dataType":"string","required":true},
+            "priceBreakdown": {"dataType":"double","required":true},
+            "products": {"dataType":"array","array":{"dataType":"nestedObjectLiteral","nestedProperties":{"units":{"dataType":"double","required":true},"price":{"dataType":"double","required":true},"id":{"dataType":"string","required":true}}},"required":true},
+            "billingPeriod": {"dataType":"nestedObjectLiteral","nestedProperties":{"endTime":{"dataType":"date","required":true},"startTime":{"dataType":"date","required":true}},"required":true},
+            "createdAt": {"dataType":"datetime","required":true},
+            "updatedAt": {"dataType":"datetime","required":true},
+        },
+        "additionalProperties": true,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "CreateInvoicePayload": {
+        "dataType": "refObject",
+        "properties": {
             "name": {"dataType":"string","required":true},
             "accountId": {"dataType":"string","required":true},
             "customerId": {"dataType":"string","required":true},
             "priceBreakdown": {"dataType":"double","required":true},
             "products": {"dataType":"array","array":{"dataType":"nestedObjectLiteral","nestedProperties":{"units":{"dataType":"double","required":true},"price":{"dataType":"double","required":true},"id":{"dataType":"string","required":true}}},"required":true},
             "billingPeriod": {"dataType":"nestedObjectLiteral","nestedProperties":{"endTime":{"dataType":"datetime","required":true},"startTime":{"dataType":"datetime","required":true}},"required":true},
+        },
+        "additionalProperties": true,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "UpdateInvoicePayload": {
+        "dataType": "refObject",
+        "properties": {
+            "name": {"dataType":"string"},
+            "customerId": {"dataType":"string"},
+            "products": {"dataType":"array","array":{"dataType":"nestedObjectLiteral","nestedProperties":{"units":{"dataType":"double","required":true},"price":{"dataType":"double","required":true},"id":{"dataType":"string","required":true}}}},
+            "billingPeriod": {"dataType":"nestedObjectLiteral","nestedProperties":{"endTime":{"dataType":"datetime","required":true},"startTime":{"dataType":"datetime","required":true}}},
+            "priceBreakdown": {"dataType":"double"},
+        },
+        "additionalProperties": true,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "QueryResult_APIInvoice_": {
+        "dataType": "refObject",
+        "properties": {
+            "items": {"dataType":"array","array":{"dataType":"refObject","ref":"APIInvoice"},"required":true},
+            "totalCount": {"dataType":"integer","required":true},
+            "hasMore": {"dataType":"boolean","required":true},
+        },
+        "additionalProperties": true,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "APIQueryPayload_APIInvoice_": {
+        "dataType": "refObject",
+        "properties": {
+            "filter": {"dataType":"nestedObjectLiteral","nestedProperties":{},"required":true},
+            "page": {"dataType":"integer","default":0,"validators":{"minimum":{"value":0}}},
+            "pageSize": {"dataType":"integer","default":100,"validators":{"minimum":{"value":0}}},
+            "sort": {"dataType":"nestedObjectLiteral","nestedProperties":{}},
         },
         "additionalProperties": true,
     },
@@ -63,6 +112,157 @@ export function RegisterRoutes(app: Router) {
 
               await templateService.apiHandler({
                 methodName: 'calculate',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: 200,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/api/invoices/:id',
+            ...(fetchMiddlewares<RequestHandler>(InvoicesController)),
+            ...(fetchMiddlewares<RequestHandler>(InvoicesController.prototype.get)),
+
+            async function InvoicesController_get(request: ExRequest, response: ExResponse, next: any) {
+            const args: Record<string, TsoaRoute.ParameterSchema> = {
+                    id: {"in":"path","name":"id","required":true,"dataType":"string"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args, request, response });
+
+                const controller = new InvoicesController();
+
+              await templateService.apiHandler({
+                methodName: 'get',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: 200,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.post('/api/invoices',
+            ...(fetchMiddlewares<RequestHandler>(InvoicesController)),
+            ...(fetchMiddlewares<RequestHandler>(InvoicesController.prototype.create)),
+
+            async function InvoicesController_create(request: ExRequest, response: ExResponse, next: any) {
+            const args: Record<string, TsoaRoute.ParameterSchema> = {
+                    invoice: {"in":"body","name":"invoice","required":true,"ref":"CreateInvoicePayload"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args, request, response });
+
+                const controller = new InvoicesController();
+
+              await templateService.apiHandler({
+                methodName: 'create',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: 201,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.put('/api/invoices/:id',
+            ...(fetchMiddlewares<RequestHandler>(InvoicesController)),
+            ...(fetchMiddlewares<RequestHandler>(InvoicesController.prototype.update)),
+
+            async function InvoicesController_update(request: ExRequest, response: ExResponse, next: any) {
+            const args: Record<string, TsoaRoute.ParameterSchema> = {
+                    id: {"in":"path","name":"id","required":true,"dataType":"string"},
+                    invoice: {"in":"body","name":"invoice","required":true,"ref":"UpdateInvoicePayload"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args, request, response });
+
+                const controller = new InvoicesController();
+
+              await templateService.apiHandler({
+                methodName: 'update',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: 200,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.delete('/api/invoices/:id',
+            ...(fetchMiddlewares<RequestHandler>(InvoicesController)),
+            ...(fetchMiddlewares<RequestHandler>(InvoicesController.prototype.delete)),
+
+            async function InvoicesController_delete(request: ExRequest, response: ExResponse, next: any) {
+            const args: Record<string, TsoaRoute.ParameterSchema> = {
+                    id: {"in":"path","name":"id","required":true,"dataType":"string"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args, request, response });
+
+                const controller = new InvoicesController();
+
+              await templateService.apiHandler({
+                methodName: 'delete',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: 204,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.post('/api/invoices/query',
+            ...(fetchMiddlewares<RequestHandler>(InvoicesController)),
+            ...(fetchMiddlewares<RequestHandler>(InvoicesController.prototype.query)),
+
+            async function InvoicesController_query(request: ExRequest, response: ExResponse, next: any) {
+            const args: Record<string, TsoaRoute.ParameterSchema> = {
+                    payload: {"in":"body","name":"payload","required":true,"ref":"APIQueryPayload_APIInvoice_"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args, request, response });
+
+                const controller = new InvoicesController();
+
+              await templateService.apiHandler({
+                methodName: 'query',
                 controller,
                 response,
                 next,
